--- a/.github/workflows/artiaction1.yml
+++ b/.github/workflows/artiaction1.yml
@@ -26,7 +26,7 @@ jobs:
       - name: jFrog CLI for Artifactory
         # You may pin to the exact commit or the version.
         # uses: advancedcsg-open/action-jfrog-cli@313e1c521402e7239d3facaf9b039f01a4e95e25
-        uses: jfrog/setup-jfrog-cli@v1.1.0
+        uses: advancedcsg-open/action-jfrog-cli@v1.2.0
         with:
           # URL of Artifactory instance
           url: 'http://192.168.33.11'
@@ -35,7 +35,7 @@ jobs:
           # Username for Artifactory. Must be supplied when credentials type is username
           user: 'admin'
           # Password for Artifactory. Must be supplied when credentials type is username
-          password: 'admin'
+          password: admin
           # Artifactory API Key. Must be supplied when credentials type is apikey
           #apikey: # optional
           # Artifactory access token. Must be supplied when credentials type is accesstoken
