--- a/.github/workflows/artiaction1.yml
+++ b/.github/workflows/artiaction1.yml
@@ -1,44 +1,24 @@
-# This is a basic workflow to help you get started with Actions
+name: "JFrog CLI Example"
+on: [push, pull_request]
 
-name: CI
-
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    
     runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    container: amd64:/golang:latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: jFrog CLI for Artifactory
-        # You may pin to the exact commit or the version.
-        # uses: advancedcsg-open/action-jfrog-cli@313e1c521402e7239d3facaf9b039f01a4e95e25
-        uses: jfrog/setup-jfrog-cli@v1.1.0
-        with:
-          # URL of Artifactory instance
-          url: 'http://192.168.33.11/artifactory'
-          # Type of authentication to use. Must be one of username, apikey or accesstoken. Defaults to apikey
-          credentials type: 'username'
-          # Username for Artifactory. Must be supplied when credentials type is username
-          user: 'admin'
-          # Password for Artifactory. Must be supplied when credentials type is username
-          password: admin
-          # Artifactory API Key. Must be supplied when credentials type is apikey
-          #apikey: # optional
-          # Artifactory access token. Must be supplied when credentials type is accesstoken
-          #access token: # optional
-          # Specify a working directory for the command to run in.
-          #working directory: # optional, default is .
+      - name: Setup JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v1
+        env:
+          JF_ARTIFACTORY_SERVER: ${{ secrets.JF_RT_DEF }}
+          
+      - name: Checkout
+         uses: actions/checkout@v1
+      - name: Build
+         run:
+          jfrog rt go-config --servevr-id-resolve Default-Server --repo-resolve artifactorydemo
+          export CGO_ENABLED=0
+          jfrog rt go build -o jfrog -ldflags '-w -extldflags "-static"' main.go --module "FFrog CLI Example"
+          version=$(./jfrog -v | cut -d " " -f 3)
+          echo Build JFrog CLI version $version
+          jfrog rt u jfrog artifactorydemo
